# shapefile2geojson

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
